<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_sort" android:icon="@drawable/ic_gallery" android:title="@string/nav_sort" />
    <item android:id="@+id/nav_queue" android:icon="@drawable/ic_trash" android:title="@string/nav_queue" />
    <item android:id="@+id/nav_menu" android:icon="@drawable/ic_menu" android:title="@string/nav_menu" />
</menu>

