<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main" android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:background="@color/canvas">
    <FrameLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <include layout="@layout/page_sort" />
        <include layout="@layout/page_queue" />
        <include layout="@layout/page_menu" />
    </FrameLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:background="@color/surface_card" app:elevation="0dp"
        app:itemIconTint="@color/nav_colors" app:itemTextColor="@color/nav_colors"
        app:labelVisibilityMode="labeled" app:menu="@menu/bottom_navigation" />
</LinearLayout>
